# wondercs-comp-sci-basics

./: .gitattributes  .gitignore  README.md  pyproject.toml
Lesson_01/introduction_examples_bible_search/: berean_study_bible.csv  semantic_search.ipynb
Lesson_01/introduction_examples_simple/: main.py
Lesson_02/examples/: main.py
Lesson_02/exercises/: main.py  solutions.py
Lesson_03/examples/: example1.py  example2.py  example3.py  example4.py  example5.py
Lesson_03/exercises/: main.py  solutions.py
Lesson_04/examples/: example1.py  example2.py  example3.py  example4.py  example5.py
Lesson_04/exercises/: exercises.md  helperFunctions.py  main.py  solutions.py
Lesson_05/examples/: example1.py  example2.py
Lesson_05/exercises/: main.py  solution.py
Lesson_06/examples/: main.py
Lesson_06/exercises/: main.py  solutions.py
Lesson_07/examples/: main.py
Lesson_07/exercises/: main.py  solution.py
Lesson_08/examples/: main.py
Lesson_08/exercises/: main.py  solutions.py  test_helper.py
Lesson_09/examples/: main.py
Lesson_09/exercises/: main.py  solutions.py
Lesson_10/examples/: example1.py  example2.py  example4.py
Lesson_10/exercises/: main.py  solutions.py
Lesson_11/examples/: main.py
Lesson_11/exercises/: main.py  solutions.py
Lesson_12/examples/: example1.py  example2.py  example3.py  module1.py  module2.py
Lesson_12/exercises/: main.py  solutions.py  test.py  wordtools.py
Lesson_13/examples/: main.py  test.txt  test2.txt
Lesson_13/exercises/: main.py  solutions.py  test.txt  (+1 more)
Year_Of_Wonder_Display_24/: black_jack.py  main.py
(+50 files in other folders)
